[gd_scene load_steps=3 format=3 uid="uid://contextpopup"]

[ext_resource type="Script" path="res://scripts/ui/context_action_popup.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0705882, 0.0901961, 0.129412, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
border_color = Color(0.45098, 0.823529, 1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="ContextActionPopup" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -120.0
offset_right = 140.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")
visible = false

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Content" type="VBoxContainer" parent="Margin"]
anchors_preset = 8
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
separation = 12

[node name="TitleLabel" type="Label" parent="Margin/Content"]
unique_name_in_owner = true
text = "Actions"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="ActionsContainer" type="VBoxContainer" parent="Margin/Content"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
separation = 8

[node name="CloseButton" type="Button" parent="Margin/Content"]
unique_name_in_owner = true
text = "Cancel"
size_flags_horizontal = 3
focus_mode = 1
